--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-handlebars": "^7.0.4",
     "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
-    "mongodb": "^4.13.0"
+    "mongodb": "^4.13.0",
+    "multer": "^1.4.5-lts.1"
   },
   "repository": {
     "type": "git",
